# Ejercicios-con-agentes

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  agents.py  app.py  pyproject.toml  requirements.txt  tools.py
src/: agents.py  geometry_app.py
